--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ html, body {
 	overflow: hidden;
 }
 
-#chars {
+#grid {
 	list-style: none;
 	font-family: AudioWide;
 	color: #444;
@@ -45,28 +45,19 @@ html, body {
 
 	.on {
 		color:#FFF;
+		text-shadow: 0 0 5px #AAA, 0 0 10px #AAA, 0 0 15px #AAA, 0 0 20px #AAA, 0 0 25px #AAA, 0 0 30px #AAA;
+		/*text-shadow: 0 0 5px #FFF, 0 0 10px #FFF, 0 0 15px #FFF, 0 0 20px #AAA, 0 0 35px #AAA, 0 0 40px #AAA, 0 0 50px #AAA, 0 0 75px #AAA;*/
 	}
 
-	.theme1 .on {
-		text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #228DFF, 0 0 35px #228DFF, 0 0 40px #228DFF, 0 0 50px #228DFF, 0 0 75px #228DFF;
-	}
-
-	.theme2 .on {
-		text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #FF1177, 0 0 35px #FF1177, 0 0 40px #FF1177, 0 0 50px #FF1177, 0 0 75px #FF1177;
-	}
-
-	.theme3 .on {
-		text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #FF9900, 0 0 35px #FF9900, 0 0 40px #FF9900, 0 0 50px #FF9900, 0 0 75px #FF9900;
-	}
-
-	.theme4 .on {
-		text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #FFDD1B, 0 0 35px #FFDD1B, 0 0 40px #FFDD1B, 0 0 50px #FFDD1B, 0 0 75px #FFDD1B;
-	}
-
-	.theme5 .on {
-		text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #B6FF00, 0 0 35px #B6FF00, 0 0 40px #B6FF00, 0 0 50px #B6FF00, 0 0 75px #B6FF00;
-	}
-
-	.theme6 .on {
-		text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #ff00de, 0 0 35px #ff00de, 0 0 40px #ff00de, 0 0 50px #ff00de, 0 0 75px #ff00de;
-	}
+#overlay {
+	pointer-events: none;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	opacity: 0.50;
+	mix-blend-mode: overlay;
+	transition: background-color 1s ease-in-out;
+	display: none;
+}
