--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ html, body, ul, li {
 html, body {
 	background-color: #222;
 	background: repeating-linear-gradient(45deg, #2b2b2b 0%, #2b2b2b 10%, #222222 0%, #222222 50%) 0 / 15px 15px;
+	width: 100%;
 	height: 100%;
 	overflow: hidden;
 }
