State is stored on location.hash instead of localStorage. Implement no transitions and no dots

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,10 @@ html, body {
 	overflow: hidden;
 }
 
+.no-transitions * {
+	transition: none !important;
+}
+
 #grid {
 	list-style: none;
 	font-family: AudioWide;
